CE-71 Editing of Scores in the Frontend
* Implemented possibility to edit a ScoringRequest

* Added Button for editing scores to the response page

* Added button for editing scores to the request overview

* Added translation for validationmessages

* Added current language to localStorage

Approved-by: Philipp Schlegel

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -52,6 +52,9 @@
   "scoreCalculating": "Berechne...",
   "secondaryCare": "Sekundäre Kümmerung",
   "primaryCare": "Primäre Kümmerung",
-  "yes": "ja",
-  "no": "nein"
+  "yes": "Ja",
+  "no": "Nein",
+  "editScore": "Score bearbeiten",
+  "validationRangeMessage": "Der Wert muss zwischen {{minimum}} und {{maximum}} liegen.",
+  "optionSelect": "Wählen Sie eine Option"
 }
