CE-76 - Ability to change the order of input fields
* Implemented Drag'n'Drop behaviour for LabResult-Biomarkers

* Added new component layout for flexible and fixed biomarkers

* Added ability to enter edit mode to move biomarkers and change respective units

* Implemented saving the order and units of biomarkers to the user profile

Approved-by: Xavier Willemin

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -56,5 +56,10 @@
   "no": "Nein",
   "editScore": "Score bearbeiten",
   "validationRangeMessage": "Der Wert muss zwischen {{minimum}} und {{maximum}} liegen.",
-  "optionSelect": "Wählen Sie eine Option"
+  "optionSelect": "Wählen Sie eine Option",
+  "category": {
+    "noContent":  "Keine Biomarker gefunden.",
+    "edit": "Bearbeiten",
+    "save": "Speichern"
+  }
 }
