--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -1,65 +1,130 @@
 {
-  "language": "Deutsch",
-  "greeting": "Hallo!",
-  "buttonText": "Übersetzen",
-  "existingScores": "Vorhandene Scores",
-  "createNewScore": "Neuen Score Erstellen",
-  "profile": "Profil",
-  "logout": "Logout",
-  "login": "Login",
-  "scores": "Scores",
-  "patientName": "Patient Name",
-  "patientNamePlaceholder": "Name des Patienten eingeben...",
-  "patientLastName": "Patient Nachname",
-  "patientLastNamePlaceholder": "Nachname des Patienten eingeben...",
-  "patientBirthDate": "Patient Geburtsdatum",
-  "birthdate": "Geburtsdatum",
-  "search": "Suche",
-  "id": "ID",
-  "timestamp": "Zeitstempel",
-  "risk": "Risiko",
-  "details": "Details",
-  "userIdentitySetting": "Identitätseinstellungen",
-  "userGeneralSetting": "Allgemeine Einstellungen",
-  "userEMail": "E-Mail",
-  "userSalutation": "Anrede",
-  "userTitle": "Titel",
-  "userFirstName": "Vorname",
-  "userLastName": "Nachname",
-  "userProfSpec": "Berufliche Spezialisierung",
-  "userDepartment": "Abteilung",
-  "userPrefLab": "Bevorzugtes Labor für Cardio Explorer Testanalyse",
-  "userAddress": "Adresse",
-  "userZIP": "PLZ",
-  "userCity": "Stadt",
-  "userCountryCode": "Ländercode",
-  "userPhoneNumber": "Telefonnummer",
-  "userLanguage": "Sprache",
-  "userUnitsLabValues": "Einheit Testwerte",
-  "userFirstEval": "Ich führe eine erste klinische Untersuchung von Patienten mit Verdacht auf koronare Herzkrankheit durch",
-  "userSecondaryEval": "Ich führe eine sekundäre klinische Untersuchung von Patienten mit Verdacht auf koronare Herzkrankheit durch, um über weitere diagnostische Verfahren zu entscheiden (z. B. kardiale Bildgebungstests, invasive Koronarangiographie).",
-  "userMedicalSpecialist": "Fachärzt:innen",
-  "userGeneralPractitioner": "Allgemeinmediziner:innen",
-  "userEndocrinologists": "Endokrinolog:innen",
-  "userDiabetologists": "Diabetolog:innen",
-  "userOther": "Andere nicht-kardiologischer Fachärzt:innen",
-  "scorePatientName": "Patient Name",
-  "scoreInputDate": "Eingabedatum",
-  "scoreInputDateInfotext": "Datum der Score-Anfrage",
-  "scoreCalculateNew": "Neuen Score Berechnen",
-  "scorePrint": "Drucken",
-  "scoreCalculate": "Risiko Score Berechnen",
-  "scoreCalculating": "Berechne...",
-  "secondaryCare": "Sekundäre Kümmerung",
-  "primaryCare": "Primäre Kümmerung",
-  "yes": "Ja",
-  "no": "Nein",
-  "editScore": "Score bearbeiten",
-  "validationRangeMessage": "Der Wert muss zwischen {{minimum}} und {{maximum}} liegen.",
-  "optionSelect": "Wählen Sie eine Option",
+  "section": {
+    "existingScores": "Vorhandene Scores",
+    "createNewScore": "Neuen Score Erstellen",
+    "editScore": "Score bearbeiten",
+    "profile": "Profil",
+    "logout": "Logout",
+    "login": "Login"
+  },
+  "scores": {
+    "scores": "Scores",
+    "search": "Suche",
+    "id": "ID",
+    "timestamp": "Zeitstempel",
+    "risk": "Risiko",
+    "details": "Details",
+    "edit": "Bearbeiten",
+    "creationDate": "Erstelldatum",
+    "calculate": "Risiko Score Berechnen",
+    "calculating": "Berechne...",
+    "print": "Drucken",
+    "incomplete": "TBD"
+  },
+  "patient": {
+    "name": "Patient Name",
+    "lastName": "Patient Nachname",
+    "birthdate": "Geburtsdatum"
+  },
   "category": {
     "noContent": "Keine Biomarker gefunden.",
     "edit": "Bearbeiten",
     "save": "Speichern"
+  },
+  "accordion": {
+    "less": "weniger",
+    "more": "mehr"
+  },
+  "biomarker": {
+    "validationRangeMessage": "Der Wert muss zwischen {{minimum}} und {{maximum}} liegen.",
+    "optionSelect": "Wählen Sie eine Option"
+  },
+  "profile": {
+    "eMail": "E-Mail",
+    "salutation": {
+      "caption": "Anrede",
+      "options": {
+        "mr": "Herr",
+        "ms": "TBD",
+        "mrs": "Frau"
+      }
+    },
+    "title": "Titel",
+    "firstName": "Vorname",
+    "lastName": "Nachname",
+    "contact": {
+      "caption": "Kontaktinformationen",
+      "address": "Adresse",
+      "zip": "PLZ",
+      "city": "Stadt",
+      "countryCode": "Ländercode",
+      "phoneNumber": "Telefonnummer"
+    },
+    "settings": "Einstellungen",
+    "prefLab": "Bevorzugtes Labor für Cardio Explorer Testanalyse",
+    "language": "Sprache",
+    "update": "Aktualisieren"
+  },
+  "profileSettings": {
+    "identitySettings": "Identitätseinstellungen",
+    "generalSettings": {
+      "caption": "Allgemeine Einstellungen",
+      "profSpec": "Berufliche Spezialisierung",
+      "department": "Abteilung"
+    }
+  },
+  "labUnit": {
+    "caption": "Einheit Testwerte",
+    "options": {
+      "si": "SI",
+      "conventional": "Konventionell",
+      "other": "Andere"
+    }
+  },
+  "clinicalSetting": {
+    "caption": "TBD",
+    "howChoose": "TBD",
+    "selectionGuide": "TBD",
+    "howRequestChange": "TBD",
+    "requestChangeGuide": "TBD",
+    "primaryCare": "TBD",
+    "secondaryCare": "TBD",
+    "confirm": "TBD"
+  },
+  "country": {
+    "caption": "Land",
+    "ger": "Deutschland",
+    "uae": "Vereinigte Arabische Emirate",
+    "ch": "Schweiz"
+  },
+  "organization": {
+    "caption": "Organisation",
+    "noOrg": "Keine Organisation",
+    "exxeta": "Exxeta AG",
+    "preventon": "Preventon"
+  },
+  "login": {
+    "requestAccess": "Zugang beantragen",
+    "requestSuccess": "Zugang beantragt!",
+    "requestSuccessInfo": "TBD"
+  },
+  "navigation": {
+    "back": "Zurück"
+  },
+  "tooltips": {
+    "patient": {
+      "name": "Name des Patienten",
+      "lastName": "Nachname des Patienten",
+      "birthdate": "Geburtsdatum des Patienten"
+    },
+    "scores": {
+      "creationDate": "Datum der Score-Anfrage"
+    }
+  },
+  "placeholders": {
+    "patient": {
+      "name": "Name des Patienten eingeben...",
+      "lastName": "Nachname des Patienten eingeben..."
+    }
   }
 }
