--- a/src/assets/i18n/en-GB.json
+++ b/src/assets/i18n/en-GB.json
@@ -1,65 +1,130 @@
 {
-  "language": "English",
-  "greeting": "Hello!",
-  "buttonText": "Translate",
-  "existingScores": "Existing Scores",
-  "createNewScore": "Create new Score",
-  "profile": "Profile",
-  "logout": "Logout",
-  "login": "Login",
-  "scores": "Scores",
-  "patientName": "Patient name",
-  "patientNamePlaceholder": "Type in patient name...",
-  "patientLastName": "Patient last name",
-  "patientLastNamePlaceholder": "Type in patient last name...",
-  "patientBirthDate": "Patient Birthdate",
-  "birthdate": "Birthdate",
-  "search": "Search",
-  "id": "ID",
-  "timestamp": "Timestamp",
-  "risk": "Risk",
-  "details": "Details",
-  "userIdentitySetting": "Identity Settings",
-  "userGeneralSetting": "General Settings",
-  "userEMail": "E-Mail",
-  "userSalutation": "Salutation",
-  "userTitle": "Title",
-  "userFirstName": "First Name",
-  "userLastName": "Last Name",
-  "userProfSpec": "Professional Specialisation",
-  "userDepartment": "Department",
-  "userPrefLab": "Preferred Lab for Cardio Explorer test analysis",
-  "userAddress": "Address",
-  "userZIP": "ZIP",
-  "userCity": "City",
-  "userCountryCode": "Country Code",
-  "userPhoneNumber": "Telephone Number",
-  "userLanguage": "Language",
-  "userUnitsLabValues": "Units labs values",
-  "userFirstEval": "I perform a first clinical evaluation of patients with suspected Coronary Artery Disease",
-  "userSecondaryEval": "I perform a secondary clinical evaluation of patients with suspected Coronary Artery Disease, to decide on further diagnostic procedure (e.g., cardiac imaging tests, invasive coronary angiography)",
-  "userMedicalSpecialist": "Medical specialist",
-  "userGeneralPractitioner": "General practitioner",
-  "userEndocrinologists": "Endocrinologists",
-  "userDiabetologists": "Diabetologists",
-  "userOther": "Other non-cardiology resident medical specialist",
-  "scorePatientName": "Patient Name",
-  "scoreInputDate": "Input Date",
-  "scoreInputDateInfotext": "Date the Scoring request was made",
-  "scoreCalculateNew": "Calculate new Score",
-  "scorePrint": "Print",
-  "scoreCalculate": "Calculate Risk Score",
-  "scoreCalculating": "Calculating...",
-  "secondaryCare": "Secondary Care",
-  "primaryCare": "Primary Care",
-  "yes": "Yes",
-  "no": "No",
-  "editScore": "Edit Score",
-  "validationRangeMessage": "The value must be between {{minimum}} and {{maximum}}.",
-  "optionSelect": "Select an option",
+  "section": {
+    "existingScores": "Existing Scores",
+    "createNewScore": "Create new Score",
+    "editScore": "Edit Score",
+    "profile": "Profile",
+    "logout": "Logout",
+    "login": "Login"
+  },
+  "scores": {
+    "scores": "Scores",
+    "search": "Search",
+    "id": "ID",
+    "timestamp": "Timestamp",
+    "risk": "Risk",
+    "details": "Details",
+    "edit": "Edit",
+    "creationDate": "Creation Date",
+    "calculate": "Calculate",
+    "calculating": "Calculating...",
+    "print": "Print",
+    "incomplete": "INCOMPLETE"
+  },
+  "patient": {
+    "name": "Patient name",
+    "lastName": "Patient last name",
+    "birthdate": "Birthdate"
+  },
   "category": {
     "noContent": "No biomarkers to show.",
     "edit": "Edit",
     "save": "Save"
+  },
+  "accordion": {
+    "less": "less",
+    "more": "more"
+  },
+  "biomarker": {
+    "validationRangeMessage": "The value must be between {{minimum}} and {{maximum}}.",
+    "optionSelect": "Select an option"
+  },
+  "profile": {
+    "eMail": "E-Mail",
+    "salutation": {
+      "caption": "Salutation",
+      "options": {
+        "mr": "Mr.",
+        "ms": "Ms.",
+        "mrs": "Mrs."
+      }
+    },
+    "title": "Title",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "contact": {
+      "caption": "Contact details",
+      "address": "Address",
+      "zip": "ZIP",
+      "city": "City",
+      "countryCode": "Country Code",
+      "phoneNumber": "Telephone Number"
+    },
+    "settings": "Settings",
+    "prefLab": "Preferred Lab for Cardio Explorer test analysis",
+    "language": "Language",
+    "update": "Update"
+  },
+  "profileSettings": {
+    "identitySettings": "Identity Settings",
+    "generalSettings": {
+      "caption": "General Settings",
+      "profSpec": "Professional Specialisation",
+      "department": "Department"
+    }
+  },
+  "labUnit": {
+    "caption": "Units labs values",
+    "options": {
+      "si": "SI",
+      "conventional": "Conventional",
+      "other": "Other"
+    }
+  },
+  "clinicalSetting": {
+    "caption": "Clinical Setting",
+    "howChoose": "How to choose?",
+    "selectionGuide": "<p>To ensure accurate risk stratification using the Cardio Explorer, the choice of the appropriate calibration should be tailored to the clinical setting, such as risk stratification or screening in primary care versus  evaluation by a cardiologist or in a hospital setting (secondary care). </p> <p>The accuracy of a disease prediction model depends on the prevalence of the disease in the population being  tested. Therefore, the cut-off points on the receiver operating characteristic (ROC) curve, which indicate  the balance between sensitivity and specificity of the model, need to be adjusted based on the prevalence of  the clinical setting where the model is being used. This is typically referred to as calibration. This  calibration process ensures that the model's predictions are accurate and reliable in the specific  population being tested. By adjusting the cut-off point, the model can maintain an appropriate balance  between sensitivity and specificity, which is crucial for accurate disease prediction and diagnosis. </p> <p>  For example, in a hospital population with a high prevalence of CAD, a lower cut-off point on the ROC curve  is appropriate in order to maximize sensitivity and minimize false negatives. Conversely, in a primary care  population with a low prevalence of CAD, a higher cut-off point is needed to maximize specificity and minimize false positives.</p>",
+    "howRequestChange": "How to request a change?",
+    "requestChangeGuide": "TBD",
+    "primaryCare": "Risk stratification or screening in primary care",
+    "secondaryCare": "Evaluation by a cardiologist or in a hospital setting (secondary care)",
+    "confirm": "I understand that my choice is conclusive."
+  },
+  "country": {
+    "caption": "Country",
+    "ger": "Germany",
+    "uae": "United Arab Emirates",
+    "ch": "Switzerland"
+  },
+  "organization": {
+    "caption": "Organization",
+    "noOrg": "No Organization",
+    "exxeta": "Exxeta AG",
+    "preventon": "Preventon"
+  },
+  "login": {
+    "requestAccess": "Request Access",
+    "requestSuccess": "Access Requested!",
+    "requestSuccessInfo": "One of our employees will get into contact with you."
+  },
+  "navigation": {
+    "back": "Back"
+  },
+  "tooltips": {
+    "patient": {
+      "name": "First name of the patient",
+      "lastName": "Last name of the patient",
+      "birthdate": "Date of birth of the patient"
+    },
+    "scores": {
+      "creationDate": "Date the Scoring request was made"
+    }
+  },
+  "placeholders": {
+    "patient": {
+      "name": "Type in patient name...",
+      "lastName": "Type in patient last name..."
+    }
   }
 }
