--- a/src/assets/i18n/en-GB.json
+++ b/src/assets/i18n/en-GB.json
@@ -25,7 +25,7 @@
     "name": "Patient name",
     "lastName": "Patient last name",
     "birthdate": "Birthdate",
-    "errors": {
+    "validation": {
       "name": "Patient Name is required.",
       "lastName": "Patient last name is required.",
       "birthdate": "Patient Birthdate is required."
@@ -33,8 +33,10 @@
   },
   "category": {
     "noContent": "No biomarkers to show.",
-    "edit": "Edit",
-    "save": "Save"
+    "unitPreferences": {
+      "edit": "Edit",
+      "save": "Save"
+    }
   },
   "accordion": {
     "less": "less",
@@ -130,6 +132,31 @@
     "patient": {
       "name": "Type in patient name...",
       "lastName": "Type in patient last name..."
+    }
+  },
+  "errorMessage": {
+    "title": "Error",
+    "loadGraphEndpointFailed": "Loading Graph Endpoint failed. TBD",
+    "scores": {
+      "editRequest": "Score can not be edited. TBD",
+      "saveScore": "Score can not be calculated. TBD",
+      "loadSpecificScore": "Score can not be loaded. TBD",
+      "loadPatientRecords": "Patient Records can not be loaded. TBD",
+      "loadSpecificPatientScores": "Specific Patient Records can not be loaded. TBD",
+      "loadScoreSchema": "Score Schema can not be loaded. TBD"
+    },
+    "preferences": {
+      "savingFailed": "An error occurred on updating user preferences TBD"
+    },
+    "biomarker": {
+      "loadingFailed": "Loading Biomarker Schema failed. TBD"
+    },
+    "user": {
+      "loginFailed": "Login failed",
+      "loadUserFailed": "User could not be loaded. TBD",
+      "requestAccessFailed": "Request Access failed. TBD",
+      "updateUserFailed": "User could not be updated. TBD",
+      "createUserFailed": "User could not be created. TBD"
     }
   }
 }
