CE-161 save as draft
* implement save score as draft

* fix display of validated inputs after click calculate button

* style draft button

* add empty validation text to translations

* add empty validation text to lab result

* validate patient data on save draft


Approved-by: Angelo Meisel

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -19,7 +19,8 @@
     "calculate": "Risiko Score Berechnen",
     "calculating": "Berechne...",
     "print": "Drucken",
-    "incomplete": "TBD"
+    "incomplete": "TBD",
+    "saveDraft": "Als Vorlage speichern TBD"
   },
   "patient": {
     "name": "Patient Name",
@@ -44,6 +45,7 @@
   },
   "biomarker": {
     "validationRangeMessage": "Der Wert muss zwischen {{min}} und {{max}} liegen.",
+    "validationEmpty": "Feld muss ausgefüllt sein.",
     "optionSelect": "Wählen Sie eine Option"
   },
   "profile": {
