CE-106 Selection of different unit system is not implemented/working
* delete unitTypeinput on profile

* add drop-down to edit component, fix update

* set preferredUnit value initially for display

* hide "other" in dropdown + translate values

Approved-by: Angelo Meisel

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -84,10 +84,11 @@
   },
   "labUnit": {
     "caption": "Einheit Testwerte",
+    "unitTypeSelect": "Wählen Sie Ihre bevorzugte Einheit TBD",
     "options": {
-      "si": "SI",
-      "conventional": "Konventionell",
-      "other": "Andere"
+      "SI": "SI",
+      "Conventional": "Konventionell",
+      "Other": "Angepasst TBD"
     }
   },
   "clinicalSetting": {
