CE-55 Frontend: Implement page for inactive users
* changed local env back to default

* Fixed behaviour of inactive user component

* fix routing of can-activate-guard on error

* fix subscription of login popup

* add activation guard to onboarding page

* re-add page header with deactivated routes + delete logout button

* translate german texts


Approved-by: Angelo Meisel

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -137,6 +137,16 @@
       "lastName": "Nachname des Patienten eingeben..."
     }
   },
+  "userFeedback": {
+    "inactive": {
+      "header": "USER INAKTIV TBD",
+      "info": "Ihr Benutzeraccount ist inaktiv! TBD"
+    },
+    "notFound": {
+      "header": "404 - Nicht gefunden TBD",
+      "info": "Die gesuchte Seite konnte nicht gefunden werden. TBD"
+    }
+  },
   "infoMessage": {
     "formInfoHeader": "Info",
     "patientDataRequired": "Patientendaten sind erforderlich um eine Vorlage zu speichern."
