--- a/src/assets/i18n/en-GB.json
+++ b/src/assets/i18n/en-GB.json
@@ -50,38 +50,22 @@
     "optionSelect": "Select an option"
   },
   "profile": {
-    "eMail": "E-Mail",
     "salutation": {
-      "caption": "Salutation",
       "options": {
         "mr": "Mr.",
         "ms": "Ms.",
         "mrs": "Mrs."
       }
     },
-    "title": "Title",
-    "firstName": "First Name",
-    "lastName": "Last Name",
-    "contact": {
-      "caption": "Contact details",
-      "address": "Address",
-      "zip": "ZIP",
-      "city": "City",
-      "countryCode": "Country Code",
-      "phoneNumber": "Telephone Number"
-    },
+    "contact": "Contact details",
+    "billing": "Billing",
     "settings": "Settings",
-    "prefLab": "Preferred Lab for Cardio Explorer test analysis",
-    "language": "Language",
-    "update": "Update"
+    "update": "Update",
+    "create": "Create User"
   },
   "profileSettings": {
     "identitySettings": "Identity Settings",
-    "generalSettings": {
-      "caption": "General Settings",
-      "profSpec": "Professional Specialisation",
-      "department": "Department"
-    }
+    "generalSettings": "General Settings"
   },
   "labUnit": {
     "caption": "Units labs values",
@@ -94,10 +78,6 @@
   },
   "clinicalSetting": {
     "caption": "Clinical Setting",
-    "howChoose": "How to choose?",
-    "selectionGuide": "<p>To ensure accurate risk stratification using the Cardio Explorer, the choice of the appropriate calibration should be tailored to the clinical setting, such as risk stratification or screening in primary care versus  evaluation by a cardiologist or in a hospital setting (secondary care). </p> <p>The accuracy of a disease prediction model depends on the prevalence of the disease in the population being  tested. Therefore, the cut-off points on the receiver operating characteristic (ROC) curve, which indicate  the balance between sensitivity and specificity of the model, need to be adjusted based on the prevalence of  the clinical setting where the model is being used. This is typically referred to as calibration. This  calibration process ensures that the model's predictions are accurate and reliable in the specific  population being tested. By adjusting the cut-off point, the model can maintain an appropriate balance  between sensitivity and specificity, which is crucial for accurate disease prediction and diagnosis. </p> <p>  For example, in a hospital population with a high prevalence of CAD, a lower cut-off point on the ROC curve  is appropriate in order to maximize sensitivity and minimize false negatives. Conversely, in a primary care  population with a low prevalence of CAD, a higher cut-off point is needed to maximize specificity and minimize false positives.</p>",
-    "howRequestChange": "How to request a change?",
-    "requestChangeGuide": "TBD",
     "primaryCare": "Risk stratification or screening in primary care",
     "secondaryCare": "Evaluation by a cardiologist or in a hospital setting (secondary care)",
     "confirm": "I understand that my choice is conclusive."
@@ -150,7 +130,9 @@
   },
   "infoMessage": {
     "formInfoHeader": "Info",
-    "patientDataRequired": "Patient data is required to save the draft."
+    "patientDataRequired": "Patient data is required to save the draft.",
+    "userDataRequired": "Please fill in all required fields to save profile data.",
+    "userConfirmRequired": "Please confirm that your chosen clinical setting is conclusive."
   },
   "successMessage": {
     "formSuccessHeader": "Success",
