Bugfix/CE-237 Frontend: Issues found on Demo - additional Frontend fixes
* fix translation on request access

* fix error messages in console

* delete unused code

* set patient once - no getter

--> resolve onchange looping

* add onpush

* update page on biomarker, patient oder data changes

* unsubscribe subscription of formgroup value changes

* update flowbite

* fix score page loading data

* fix dropdown menu


Approved-by: Angelo Meisel

--- a/src/assets/i18n/de-DE.json
+++ b/src/assets/i18n/de-DE.json
@@ -50,6 +50,7 @@
     "optionSelect": "Wählen Sie eine Option"
   },
   "profile": {
+    "eMail": "E-Mail",
     "salutation": {
       "options": {
         "mr": "Herr",
@@ -57,6 +58,9 @@
         "mrs": "Frau"
       }
     },
+    "firstName": "Vorname",
+    "lastName": "Nachname",
+    "phoneNumber": "Telefonnummer",
     "contact": "Kontaktinformationen",
     "billing": "Rechnung TBD",
     "settings": "Einstellungen",
